hw3.3