@@ -1,42 +1,47 @@
 package ru.hogwarts.school.service;
 
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import ru.hogwarts.school.model.Student;
+import ru.hogwarts.school.repository.StudentRepository;
 
-import java.util.HashMap;
+import java.util.Collection;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class StudentService {
 
-    private static long cntStudent = 1l;
-    private Map<Long, Student> studentMap = new HashMap<>();
+private final StudentRepository studentRepository;
+
+    public StudentService(StudentRepository studentRepository) {
+        this.studentRepository = studentRepository;
+    }
 
     public Student addStudent(Student student) {
-        student.setId(cntStudent++);
-        studentMap.put(cntStudent++, student);
-        return student;
+        return  studentRepository.save(student);
     }
 
     public Student getStudentById(Long id) {
-        return studentMap.get(id);
+       return studentRepository.findById(id).get();
     }
     public Student updateStudent(Student student){
-        if (studentMap.containsKey(student.getId())) {
-            studentMap.put(student.getId(), student);
-            return student;
-        }
-        return null;
+
+        return studentRepository.save(student);
     }
-    public Student deleteStudent(Long id){
-        if (studentMap.containsKey(id)) {
-            return studentMap.remove(id);
-        }
-        return null;
+    public void deleteStudent(Long id){
+        studentRepository.deleteById(id);
     }
 
-    public List<Student> getAllStudent() {
-        return studentMap.values().stream().toList();
+    public Collection<Student> getAllStudent() {
+        return studentRepository.findAll();
+    }
+
+    public Collection<Student> filterStudentsForAge(Integer age) {
+
+        return getAllStudent().stream().filter(a -> a.getAge() == age)
+                .collect(Collectors.toList());
     }
 }
